--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 		<script src="bower_components/angular-route/angular-route.min.js"></script>
 
 		<script src="js/main.js"></script>
+		<script src="js/spin.min.js"></script>
 	</head>
 	<body>
 		<div ng-view></div>
