fixed template, added libs/functions to run tornado sv as daemon

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,21 @@
 	<head>
 		<title>boilerplate</title>
 
-		<link rel="stylesheet" href="bower_components/bootswatch-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">
 
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 		<script src="bower_components/angular/angular.min.js"></script>
 		<script src="bower_components/angular-route/angular-route.min.js"></script>
 
 		<script src="js/main.js"></script>
 		<script src="js/spin.min.js"></script>
+
+		<script src="app.js"></script>
+		<script src="controllers.js"></script>
+		<script src="services.js"></script>
 	</head>
 	<body>
 		<div ng-view></div>
