--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <html lang="en" ng-app="app">
 	<head>
-		<title>boilerplate</title>
+		<title>UniGIS</title>
 
 		<link href='https://fonts.googleapis.com/css?family=Lato:700,300,400,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
